--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -149,7 +149,6 @@
   "4YKQAF": "Required. The unit of time specified in the interval.",
   "4aaixN": "Tour",
   "4c0uPQ": "Required. The name of the parameter whose values you want.",
-  "4cVuMw": "Comments can only be added while editing the inputs of a step.",
   "4j2MEv": "Toggle Minimap",
   "4pm5yw": "Button to add dynamic content if TokenPicker is hidden",
   "4sYR0J": "{parameterName} is required.",
@@ -466,7 +465,7 @@
   "LvLksz": "Loading outputs",
   "LvpxiA": "Gateway",
   "Lwe7tQ": "(UTC+00:00) Dublin, Edinburgh, Lisbon, London",
-  "M0HMjE": "Add a comment",
+  "M/F2/O": "Notes can only be added while editing the inputs of a step.",
   "M0xrm+": "Code view",
   "M48CGd": "(UTC+11:00) Solomon Is., New Caledonia",
   "M4H0gh": "Remove",
@@ -621,6 +620,7 @@
   "Tmr/9e": "Invalid parameters",
   "ToPmjE": "(UTC-04:00) Cuiaba",
   "TqPfth": "(UTC+01:00) Brussels, Copenhagen, Madrid, Paris",
+  "Ts5Pzr": "Note",
   "Twfck/": "Required. The number to multiply Multiplicand 1 with.",
   "Tz5jTR": "Collapse/Expand",
   "U086AA": "Target schema element",
@@ -884,7 +884,6 @@
   "_4YKQAF.comment": "Required string parameter to represent the unit of time",
   "_4aaixN.comment": "Button text for tour and tutorial",
   "_4c0uPQ.comment": "Required string parameter to create a new parameter",
-  "_4cVuMw.comment": "Text to tell users why a comment is disabled",
   "_4j2MEv.comment": "Turn the minimap on or off",
   "_4pm5yw.comment": "Text for if image does not show up",
   "_4sYR0J.comment": "Required Parameter error message",
@@ -1201,7 +1200,7 @@
   "_LvLksz.comment": "Loading outputs text",
   "_LvpxiA.comment": "Column header for connection gateway",
   "_Lwe7tQ.comment": "Timezone value ",
-  "_M0HMjE.comment": "Text to tell users to click to add comments",
+  "_M/F2/O.comment": "Text to tell users why notes are disabled",
   "_M0xrm+.comment": "Code view title",
   "_M48CGd.comment": "Timezone value ",
   "_M4H0gh.comment": "Label to remove",
@@ -1356,6 +1355,7 @@
   "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
   "_ToPmjE.comment": "Timezone value ",
   "_TqPfth.comment": "Timezone value ",
+  "_Ts5Pzr.comment": "Note text",
   "_Twfck/.comment": "Required number parameter to be multiplied in mul function",
   "_Tz5jTR.comment": "Text of Tooltip to collapse and expand",
   "_U086AA.comment": "Label for target schema node",
@@ -1524,7 +1524,6 @@
   "_cqiqcf.comment": "Label text for retry start time",
   "_cr0UnG.comment": "Hour of the day",
   "_cscezV.comment": "Required collection parameter to apply skip function on",
-  "_d3bSQA.comment": "Text to tell users to click to delete comments",
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dDYCuU.comment": "Link text to open URL",
@@ -1616,7 +1615,6 @@
   "_i1cwra.comment": "Button text for redo the last undone action",
   "_i4C4aB.comment": "title for networking setting section",
   "_i4Om5O.comment": "Error message for invalid integer array",
-  "_iBlvhu.comment": "Comment text",
   "_iCSHJG.comment": "Label for description of custom toUpper Function",
   "_iEy9pT.comment": "Token picker mode to insert dynamic content",
   "_iHVVTl.comment": "Text for delete node modal body",
@@ -1747,6 +1745,7 @@
   "_oVVPst.comment": "Discard warning message",
   "_odQ554.comment": "Response body for test map API",
   "_ol+TkT.comment": "Timezone value ",
+  "_onXUu0.comment": "Text to tell users to click to add comments",
   "_ox2Ou7.comment": "Placeholder for empty collapsed dictionary",
   "_oxH1L/.comment": "Timezone value ",
   "_p/0r2N.comment": "Required string parameter to be used as key for formDataValue function",
@@ -1915,6 +1914,7 @@
   "_x+6ccf.comment": "Day of the week",
   "_x0or2o.comment": "Required collection parameter to apply length Function",
   "_x10E1p.comment": "Display name for status code in outputs",
+  "_x8kTAX.comment": "Text to tell users to click to delete comments",
   "_xC1zg3.comment": "Section header for the schema section",
   "_xFQXAI.comment": "Button text for the control-Z button combination to undo the last action",
   "_xJ6vjn.comment": "Label for description of custom uriComponentToString Function",
@@ -2016,7 +2016,6 @@
   "cqiqcf": "Start time",
   "cr0UnG": "9",
   "cscezV": "Required. The collection to skip the first Count objects from.",
-  "d3bSQA": "Delete comment",
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
   "dDYCuU": "Learn more",
@@ -2108,7 +2107,6 @@
   "i1cwra": "Redo",
   "i4C4aB": "Networking",
   "i4Om5O": "This contains an invalid value",
-  "iBlvhu": "Comment",
   "iCSHJG": "Converts a string to uppercase using the casing rules of the invariant culture",
   "iEy9pT": "Dynamic content",
   "iHVVTl": "Are you sure you want to delete {nodeId}?",
@@ -2239,6 +2237,7 @@
   "oVVPst": "Do you want to discard all unsaved changes?",
   "odQ554": "Response body",
   "ol+TkT": "(UTC-03:00) Salvador",
+  "onXUu0": "Add a note",
   "ox2Ou7": "Enter a valid JSON",
   "oxH1L/": "(UTC-07:00) Chihuahua, La Paz, Mazatlan",
   "p/0r2N": "Required. The key name of the form data value to return.",
@@ -2407,6 +2406,7 @@
   "x+6ccf": "Wednesday",
   "x0or2o": "Required. The collection for which to get the length.",
   "x10E1p": "Status Code",
+  "x8kTAX": "Delete note",
   "xC1zg3": "Schemas",
   "xFQXAI": "Ctrl + Z",
   "xJ6vjn": "Returns a string representation of a URI encoded string",
