--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -110,6 +110,7 @@
   "2xhbE1": "(UTC+11:00) Magadan",
   "2y24a/": "Save",
   "33+WHG": "Identifier",
+  "34Nt/B": "alt text for button icon",
   "36RiST": "System-assigned managed identity",
   "3AWwVl": "Code",
   "3BZnxY": "Add dynamic content",
@@ -416,6 +417,7 @@
   "IsVhkH": "No properties",
   "Iwi+x0": "Please select yes or no",
   "J/Kz1j": "Asynchronous Pattern",
+  "J2Su6x": "Formatting options for font size",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
   "J9wWry": "Parameters",
@@ -559,6 +561,7 @@
   "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
   "QQYzHC": "Context menu for {title} card",
+  "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
   "QbJDi7": "Item",
@@ -845,6 +848,7 @@
   "_2xhbE1.comment": "Timezone value ",
   "_2y24a/.comment": "Save button label",
   "_33+WHG.comment": "Column header text for identifier",
+  "_34Nt/B.comment": "alt text for button icon",
   "_36RiST.comment": "System-assigned managed identity dropdown option text",
   "_3AWwVl.comment": "The title of the code property in the static result schema",
   "_3BZnxY.comment": "Label for button to open token picker",
@@ -1151,6 +1155,7 @@
   "_IsVhkH.comment": "No properties text",
   "_Iwi+x0.comment": "Placeholder text shown for a newly inserted Boolean parameter",
   "_J/Kz1j.comment": "title for async pattern setting",
+  "_J2Su6x.comment": "Label for Font size dropdown",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
   "_J9wWry.comment": "Heading section for Parameter tokens",
@@ -1294,6 +1299,7 @@
   "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
   "_QQYzHC.comment": "Accessability label",
+  "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
   "_QbJDi7.comment": "Label for single item inside an array.",
@@ -1814,6 +1820,7 @@
   "_sFwHQc.comment": "aria label description for cancel button",
   "_sQ2vRs.comment": "add a case to switch statement",
   "_sW47JR.comment": "label for slider indicating the degree of parallelism",
+  "_sYQDN+.comment": "Label for Font family dropdown",
   "_sZ0G/Z.comment": "Required string parameter to represent the unit of time",
   "_sbPZ9S.comment": "Required collection parameter to check empty function on",
   "_scmyvO.comment": "tit;e for action timeout setting",
@@ -2306,6 +2313,7 @@
   "sFwHQc": "Cancel creating a connection",
   "sQ2vRs": "Add Case",
   "sW47JR": "Degree of Parallelism",
+  "sYQDN+": "Formatting options for font family",
   "sZ0G/Z": "Required. A string containing the unit of time specified in the interval to add.",
   "sbPZ9S": "Required. The collection to check if it is empty.",
   "scmyvO": "Action Timeout",
