block-type selection

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -462,6 +462,7 @@
   "Lft/is": "Add new",
   "Li6x/B": "Missing required properties '{0}' for authentication type '{1}'",
   "LlYz9c": "See more",
+  "Lm9bnN": "Bullet List",
   "LoGUT3": "When used inside for-each loop, this function returns the current item of the specified loop.",
   "LpPNAD": "Add",
   "Lub7NN": "Required. The expressions that may be true.",
@@ -528,6 +529,7 @@
   "OihxQE": "Optional. The locale to be used when parsing the date time string.",
   "OjGJ8Y": "Returns the host from a URI",
   "OnrO5/": "Select a managed identity",
+  "P+7G62": "Heading 3",
   "P+mWgV": "Pfx",
   "P2A5dB": "Required. This value is the number of integers that is in the array.",
   "P2rzqn": "Default value",
@@ -587,6 +589,7 @@
   "S8P4N5": "Delete",
   "SADSSs": "(UTC+12:00) Petropavlovsk-Kamchatsky - Old",
   "SCCE6s": "Password",
+  "SGnTpt": "Heading 2",
   "SJFVxf": "issues",
   "SKXopi": "Convert the parameter to an integer",
   "SLJkRn": "Remove input",
@@ -624,6 +627,7 @@
   "Tmr/9e": "Invalid parameters",
   "ToPmjE": "(UTC-04:00) Cuiaba",
   "TqPfth": "(UTC+01:00) Brussels, Copenhagen, Madrid, Paris",
+  "Ttc0SM": "Heading 1",
   "Twfck/": "Required. The number to multiply Multiplicand 1 with.",
   "Tz5jTR": "Collapse/Expand",
   "U086AA": "Target schema element",
@@ -714,6 +718,7 @@
   "YJJ+gQ": "String",
   "YKXmKD": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime trigger",
   "YOUfNf": "Enter Pfx",
+  "YWOKlU": "Numbered List",
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
   "YfwZJO": "Search Tips",
   "Yh5OVd": "Custom value does not match one of the allowed types for this input",
@@ -1200,6 +1205,7 @@
   "_Lft/is.comment": "Button to add a new connection",
   "_Li6x/B.comment": "Error message when missing multiple required authentication properties",
   "_LlYz9c.comment": "Text that will be clicked to show more details for the connector",
+  "_Lm9bnN.comment": "Bullet List text",
   "_LoGUT3.comment": "Label for description of custom item Function",
   "_LpPNAD.comment": "label to add a condition",
   "_Lub7NN.comment": "Required expression parameters to apply or function",
@@ -1266,6 +1272,7 @@
   "_OihxQE.comment": "Optional string parameter to apply formatDateTime function with",
   "_OjGJ8Y.comment": "Label for description of custom uriHost Function",
   "_OnrO5/.comment": "A placeholder for the managed identity dropdown",
+  "_P+7G62.comment": "Heading 3 text",
   "_P+mWgV.comment": "Client Certificate Pfx Label Display Name",
   "_P2A5dB.comment": "Required number parameter to identify number of integers in range function",
   "_P2rzqn.comment": "Default value",
@@ -1325,6 +1332,7 @@
   "_S8P4N5.comment": "type and label to delete a value",
   "_SADSSs.comment": "Timezone value ",
   "_SCCE6s.comment": "Basic Password Label Display Name",
+  "_SGnTpt.comment": "Heading 2 text",
   "_SJFVxf.comment": "Issues, plural",
   "_SKXopi.comment": "Label for description of custom int Function",
   "_SLJkRn.comment": "Remove input",
@@ -1362,6 +1370,7 @@
   "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
   "_ToPmjE.comment": "Timezone value ",
   "_TqPfth.comment": "Timezone value ",
+  "_Ttc0SM.comment": "Heading 1 text",
   "_Twfck/.comment": "Required number parameter to be multiplied in mul function",
   "_Tz5jTR.comment": "Text of Tooltip to collapse and expand",
   "_U086AA.comment": "Label for target schema node",
@@ -1452,6 +1461,7 @@
   "_YJJ+gQ.comment": "This is an option in a dropdown where users can select type String for their parameter.",
   "_YKXmKD.comment": "Label for description of custom trigger Function",
   "_YOUfNf.comment": "Client Certificate Pfx Placeholder Text",
+  "_YWOKlU.comment": "Numbered List text",
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
   "_YfwZJO.comment": "Search tip header label",
   "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
@@ -1694,6 +1704,7 @@
   "_lcxLiq.comment": "Error Message for Invalid Array",
   "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
+  "_lhL/KL.comment": "Normal text",
   "_ljAOR6.comment": "Label for description of custom body Function",
   "_loxzZD.comment": "Label for button to open expression token picker",
   "_lsKVU6.comment": "Select an action type placeholder",
@@ -2187,6 +2198,7 @@
   "lcxLiq": "Please enter a valid array",
   "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
+  "lhL/KL": "Normal",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
   "loxzZD": "Insert Expression (You can also add by typing / in the editor)",
   "lsKVU6": "Select an action type",
