--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -5,6 +5,7 @@
   "+3efoo": "No schema is added",
   "+DxBpE": "Failed loading the schema. Please try again.",
   "+JCU+Y": "Select this if you are configuring an on-prem connection",
+  "+W2vTp": "Please enter an e-mail address",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
@@ -172,7 +173,6 @@
   "62Ypnr": "Error loading operation data",
   "63/zYN": "Required. The object to check if it is greater than value being compared to.",
   "65FlWi": "(UTC+08:45) Eucla",
-  "6H3oG1": "Please enter or select a date (YYYY-MM-DD)",
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
@@ -283,6 +283,7 @@
   "BSgavq": "Example: Monday, Friday",
   "BUutcC": "Expant list of sibling elements",
   "BVOUxP": "(UTC-05:00) Havana",
+  "BYrP8F": "Number",
   "Bn8iTS": "State type:",
   "BoMvF2": "Collapse",
   "BuYrD3": "A single format specifier that indicates how to format the value of this Guid.",
@@ -293,6 +294,7 @@
   "Ciol6I": "Output",
   "ClZW2r": "Value",
   "CsPY74": "Credential Type",
+  "CvoqQ6": "Please enter or select a date (YYYY-MM-DD)",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
   "CypYLs": "Insert a new step between {parentName} and {childName}",
   "Czt6YV": "at {times}",
@@ -303,7 +305,6 @@
   "DDIIAQ": "Node",
   "DGMwU4": "Use sample payload to generate schema",
   "DJW8RE": "Select a value",
-  "DOf1/I": "Please enter your input",
   "DWd9vy": "every week",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
@@ -333,11 +334,11 @@
   "EiRMD4": "Sign in to create a connection to {connectorDisplayName}.",
   "EjXdAm": "Password",
   "Eqgm4v": "(UTC-05:00) Eastern Time (US & Canada)",
+  "EurkzL": "Please select yes or no",
   "Ex4U46": "Use Invoker's Connection",
   "ExaACE": "Connection display name",
   "F3IDl8": "Required. The number of a specified time unit to add.",
   "F489Vg": "(UTC+08:00) Irkutsk",
-  "F51kU8": "Please enter a number",
   "F9dR1Q": "Add",
   "FBNevf": "Go To Operation",
   "FDF4Qb": "Returns a parameter value that is defined in the definition",
@@ -380,6 +381,7 @@
   "GtDOFg": "Cancel the selection",
   "GyUe4C": "Modify options regarding functions",
   "GzQQqH": "Array",
+  "Gziyq8": "File Content",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
   "H2WdiZ": "Enter the valid minute values (from 0 to 59) separated by comma, e.g., 15,30",
@@ -413,7 +415,6 @@
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
   "IsVhkH": "No properties",
-  "Iwi+x0": "Please select yes or no",
   "J/Kz1j": "Asynchronous Pattern",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
@@ -498,7 +499,6 @@
   "NnD8gF": "Invalid operation path input value. Path value - {pathValue} Path template - {pathTemplate}",
   "No6CS+": "Enter tenant",
   "NoXs0l": "Please select an identity",
-  "Nro0qr": "Please enter an e-mail address",
   "NvANon": "(UTC-09:00) Alaska",
   "NvJDn/": "Tuesday",
   "O+8vRv": "Returns a binary representation of a value",
@@ -518,7 +518,6 @@
   "OOUTdW": "Loading all connectors...",
   "OSHNZ2": "Comment",
   "OVvieE": "Returns the results from the top-level actions in the specified scoped action, such as a For_each, Until, or Scope action.",
-  "OcnU0i": "Please select file or image",
   "OdNhwc": "Ungroup",
   "OdoUEu": "Enable Static Result",
   "Oib1mL": "{hours}h {minutes}m",
@@ -589,6 +588,7 @@
   "SLZ0n4": "Checks if the string starts with a value (case-insensitive, invariant culture)",
   "SXb47U": "{minutes}m",
   "SY04wn": "Required. The name of the action with a form-data or form-encoded response.",
+  "SgiTAh": "Please enter your input",
   "Sh10cw": "Save",
   "SmCQys": "Custom Tracking Id",
   "Sr8PcK": "No operations found",
@@ -666,7 +666,6 @@
   "VptXzY": "Use \"{value}\" as a custom value",
   "W070M2": "of {max}",
   "W6FdMh": "Required. The name of the new property.",
-  "W7sa4b": "Enter title",
   "WGwH45": "Clear",
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
@@ -711,6 +710,7 @@
   "YJJ+gQ": "String",
   "YKXmKD": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime trigger",
   "YOUfNf": "Enter Pfx",
+  "YUbSFS": "Yes/No",
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
   "YfwZJO": "Search Tips",
   "Yh5OVd": "Custom value does not match one of the allowed types for this input",
@@ -740,6 +740,7 @@
   "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+DxBpE.comment": "Load schema error message",
   "_+JCU+Y.comment": "Tooltip for on-prem gateway connection checkbox",
+  "_+W2vTp.comment": "Placeholder description for a newly inserted Email parameter",
   "_+W9fkq.comment": "Timezone value ",
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
@@ -907,7 +908,6 @@
   "_62Ypnr.comment": "label for panel error",
   "_63/zYN.comment": "Required object parameter to compare to in less function",
   "_65FlWi.comment": "Timezone value ",
-  "_6H3oG1.comment": "Placeholder text shown for a newly inserted Date parameter",
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
@@ -1018,6 +1018,7 @@
   "_BSgavq.comment": "Placeholder for schedule days",
   "_BUutcC.comment": "Button that toggles list of elements to view",
   "_BVOUxP.comment": "Timezone value ",
+  "_BYrP8F.comment": "Placeholder title for a newly inserted Number parameter",
   "_Bn8iTS.comment": "Label text for workflow state type (Stateless or Stateful)",
   "_BoMvF2.comment": "Label for collapsing group",
   "_BuYrD3.comment": "Required format parameter to determine how to obtain GUID",
@@ -1028,6 +1029,7 @@
   "_Ciol6I.comment": "Output",
   "_ClZW2r.comment": "Parameter Field Value Title",
   "_CsPY74.comment": "Authentication OAuth Type Label",
+  "_CvoqQ6.comment": "Placeholder description for a newly inserted Date parameter",
   "_Cy9qeQ.comment": "Timezone value ",
   "_CypYLs.comment": "Tooltip for the button to add a new step (action or branch)",
   "_Czt6YV.comment": "Recurrence schedule description at times",
@@ -1038,7 +1040,6 @@
   "_DDIIAQ.comment": "Title for other node",
   "_DGMwU4.comment": "Button Label for allowing users to generate from schema",
   "_DJW8RE.comment": "Placeholder for dropdown",
-  "_DOf1/I.comment": "Placeholder text shown for a newly inserted Text parameter",
   "_DWd9vy.comment": "Recurrence schedule description every week",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
@@ -1068,11 +1069,11 @@
   "_EiRMD4.comment": "Description for creating an externally authenticated connection.",
   "_EjXdAm.comment": "OAuth Password Label Display Name",
   "_Eqgm4v.comment": "Timezone value ",
+  "_EurkzL.comment": "Placeholder description for a newly inserted Boolean parameter",
   "_Ex4U46.comment": "title for invoker connection",
   "_ExaACE.comment": "aria label description for connection display name",
   "_F3IDl8.comment": "Required integer parameter to add to time",
   "_F489Vg.comment": "Timezone value ",
-  "_F51kU8.comment": "Placeholder text shown for a newly inserted Number parameter",
   "_F9dR1Q.comment": "Add",
   "_FBNevf.comment": "Header for a search panel that searches for and allows direct navigation to a specific node",
   "_FDF4Qb.comment": "Label for description of custom parameters Function",
@@ -1115,6 +1116,7 @@
   "_GtDOFg.comment": "Aria label description for cancel button",
   "_GyUe4C.comment": "Description for the functions section",
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
+  "_Gziyq8.comment": "Placeholder title for a newly inserted File parameter",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
   "_H2WdiZ.comment": "Placeholder for schedule minutes",
@@ -1148,7 +1150,6 @@
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
   "_IsVhkH.comment": "No properties text",
-  "_Iwi+x0.comment": "Placeholder text shown for a newly inserted Boolean parameter",
   "_J/Kz1j.comment": "title for async pattern setting",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
@@ -1233,7 +1234,6 @@
   "_NnD8gF.comment": "Error message while parsing ",
   "_No6CS+.comment": "Tenant Placeholder Text",
   "_NoXs0l.comment": "MSI Identity Placeholder Text",
-  "_Nro0qr.comment": "Placeholder text shown for a newly inserted Email parameter",
   "_NvANon.comment": "Timezone value ",
   "_NvJDn/.comment": "Day of the week",
   "_O+8vRv.comment": "Label for description of custom binary Function",
@@ -1253,7 +1253,6 @@
   "_OOUTdW.comment": "Message to show under the loading icon when loading connectors",
   "_OSHNZ2.comment": "Label for the comment textfield",
   "_OVvieE.comment": "Label for description of custom result Function",
-  "_OcnU0i.comment": "Placeholder text shown for a newly inserted File parameter",
   "_OdNhwc.comment": "Ungroup button",
   "_OdoUEu.comment": "Label for toggle to enable static result",
   "_Oib1mL.comment": "This is a time duration in abbreviated format",
@@ -1324,6 +1323,7 @@
   "_SLZ0n4.comment": "Label for description of custom startsWith Function",
   "_SXb47U.comment": "This is a period in time in seconds. {minutes} is replaced by the number and m is an abbreviation of minutes",
   "_SY04wn.comment": "Required string parameter to identify action name for formDataMultiValues function",
+  "_SgiTAh.comment": "Placeholder description for a newly inserted Text parameter",
   "_Sh10cw.comment": "Button text for save the changes",
   "_SmCQys.comment": "title for client tracking id setting",
   "_Sr8PcK.comment": "Message to show when no operations are found",
@@ -1401,7 +1401,6 @@
   "_VptXzY.comment": "Label for button to allow user to create custom value in combobox from current input",
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
-  "_W7sa4b.comment": "Placeholder for variable name for new dynamically added parameter",
   "_WGwH45.comment": "Label to clear editor",
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
@@ -1446,6 +1445,7 @@
   "_YJJ+gQ.comment": "This is an option in a dropdown where users can select type String for their parameter.",
   "_YKXmKD.comment": "Label for description of custom trigger Function",
   "_YOUfNf.comment": "Client Certificate Pfx Placeholder Text",
+  "_YUbSFS.comment": "Placeholder title for a newly inserted Boolean parameter",
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
   "_YfwZJO.comment": "Search tip header label",
   "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
@@ -1542,6 +1542,7 @@
   "_dsz+Ae.comment": "Label for description of custom split Function",
   "_dwrqEc.comment": "Warnings section title",
   "_dxh2CJ.comment": "timed out run",
+  "_e+GuGo.comment": "Placeholder title for a newly inserted Text parameter",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
   "_e9OvzW.comment": "Clear",
@@ -1564,6 +1565,7 @@
   "_fDisLL.comment": "Error while creating acl",
   "_fElufw.comment": "Select an API Management resource",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
+  "_fKYuwf.comment": "Placeholder description for a newly inserted File parameter",
   "_faSDuD.comment": "Timezone value ",
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
@@ -1571,6 +1573,7 @@
   "_fmm7Ik.comment": "Token picker mode to insert expressions",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
+  "_g076bL.comment": "Placeholder title for a newly inserted Email parameter",
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
   "_g1zwch.comment": "Label to zoom the canvas in",
   "_g4igOR.comment": "Button text for publish",
@@ -1868,6 +1871,7 @@
   "_urAHv1.comment": "Hour of the day",
   "_ut5Med.comment": "Parameter Field Default Value Title",
   "_uzsleE.comment": "Label for description of custom createArray Function",
+  "_v+keTP.comment": "Placeholder title for a newly inserted Date parameter",
   "_v39HKj.comment": "Label for description of custom Global Unique Identifier Function",
   "_v7ipqH.comment": "error message for deselection of last run after action",
   "_vD2lQy.comment": "Timezone value ",
@@ -1942,6 +1946,7 @@
   "_yph4eq.comment": "Timezone value ",
   "_yqRrQ/.comment": "Label for date and time functions",
   "_ysoumb.comment": "Add input field",
+  "_yuJBmK.comment": "Placeholder description for a newly inserted Number parameter",
   "_yxsn7s.comment": "Timezone value ",
   "_yyYtZV.comment": "aria label description for connection gateway",
   "_z/UY4k.comment": "a label that shows which folder the user will be able to dig deeper into",
@@ -2034,6 +2039,7 @@
   "dsz+Ae": "Splits the string using a separator",
   "dwrqEc": "Warnings",
   "dxh2CJ": "timed out",
+  "e+GuGo": "Input",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
   "e9OvzW": "Clear",
@@ -2056,6 +2062,7 @@
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fElufw": "Select an API Management resource",
   "fGcSFd": "Paging count exceeds maximum value",
+  "fKYuwf": "Please select file or image",
   "faSDuD": "(UTC+04:00) Port Louis",
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
@@ -2063,6 +2070,7 @@
   "fmm7Ik": "Function",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
+  "g076bL": "Email",
   "g0a4Qe": "Value",
   "g1zwch": "Zoom in",
   "g4igOR": "Publish",
@@ -2360,6 +2368,7 @@
   "urAHv1": "4",
   "ut5Med": "Default Value",
   "uzsleE": "Creates an array from the parameters",
+  "v+keTP": "Trigger date",
   "v39HKj": "Generates a globally unique string (GUID)",
   "v7ipqH": "Each action must have one or more run after configurations",
   "vD2lQy": "(UTC-04:00) Asuncion",
@@ -2434,6 +2443,7 @@
   "yph4eq": "(UTC+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague",
   "yqRrQ/": "Date and time functions",
   "ysoumb": "Add field",
+  "yuJBmK": "Please enter a number",
   "yxsn7s": "(UTC+00:00) Casablanca",
   "yyYtZV": "Connection gateway",
   "z/UY4k": "Navigate to {folderName} folder",
