Check-in mostly working state

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -319,6 +319,7 @@
   "E3+TAA": "Schema node ''{nodeName}'' has an input with a mismatched type",
   "E9OS+9": "(UTC-09:00) Coordinated Universal Time-09",
   "ECZC6Y": "Converts the parameter to a decimal number",
+  "EG6R8s": "Properties",
   "ERAWZA": "Response",
   "ERVorY": "Make Group",
   "ESZXfC": "At these minutes",
@@ -355,6 +356,7 @@
   "Fgq3Db": "Required. The collection to take the last object from.",
   "Fh2HDb": "Returns the first index of a value within a string (case-insensitive, invariant culture)",
   "FiyQjU": "2",
+  "FjCk1r": "Continue",
   "FslNgF": "Status",
   "G/CC5/": "Invalid split on format in '{splitOn}'.",
   "G0XYrd": "Required. The string that may contain the value.",
@@ -394,6 +396,7 @@
   "HoQiVa": "Enter a valid datetime.",
   "Hs5+Mk": "Enter a valid value for {parameterName}.",
   "HsO1Rd": "{addIcon} Install Gateway",
+  "HxCwn5": "Value is assigned to property that is not found",
   "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
   "I7/+er": "Global view",
@@ -445,6 +448,7 @@
   "LBH8UV": "Expand",
   "LBbhCu": "Delete Workflow Graph",
   "LCXZLM": "Loading Function Apps...",
+  "LFBVn4": "Token selector properties not found. When using token selector mode, the token selector properties must be provided.",
   "LJmfmK": "See More",
   "LMB8am": "Creating...",
   "LOwePI": "Invalid type on split on value '{splitOn}', split on not in array.",
@@ -544,6 +548,7 @@
   "PtqSHp": "Do not generate if no value",
   "PvWTxR": "Show functions",
   "Pvm0xB": "Returns the base 64 representation of the input string",
+  "PxjmAH": "Entering a value here will update any other business process stages that selected the same Logic App and workflow data source.",
   "Q+oELo": "(UTC+04:00) Izhevsk, Samara",
   "Q/7unA": "Object",
   "Q0xpPQ": "Required. The object to check if it is less or equal to the comparing object.",
@@ -648,6 +653,7 @@
   "VL9wOu": "Must provide value for parameter.",
   "VLc3FV": "Source schema",
   "VUH9aj": "23",
+  "VUNM37": "Selected node",
   "VVfYvq": "Required. The number to divide by the Divisor.",
   "VXBWrq": "Comment",
   "VXQbMw": "Switch to detail inputs for array item",
@@ -1047,6 +1053,7 @@
   "_E3+TAA.comment": "Body text for the input type mismatch card",
   "_E9OS+9.comment": "Timezone value ",
   "_ECZC6Y.comment": "Label for description of custom decimal Function",
+  "_EG6R8s.comment": "The header text for the token selector section",
   "_ERAWZA.comment": "Header text for response",
   "_ERVorY.comment": "Make group button",
   "_ESZXfC.comment": "Label for schedule minutes",
@@ -1083,6 +1090,7 @@
   "_Fgq3Db.comment": "Required collection parameter to apply last function on",
   "_Fh2HDb.comment": "Label for description of custom indexOf Function",
   "_FiyQjU.comment": "Hour of the day",
+  "_FjCk1r.comment": "The text Continue for button",
   "_FslNgF.comment": "Column header text for status",
   "_G/CC5/.comment": "Error message for invalid split on value.",
   "_G0XYrd.comment": "Required text parameter to apply nthIndexOf function on",
@@ -1122,6 +1130,7 @@
   "_HoQiVa.comment": "Error validation message",
   "_Hs5+Mk.comment": "Invalid Pattern error message",
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
+  "_HxCwn5.comment": "Error message thrown when a value maps to a property that is not found",
   "_Hyp0Ao.comment": "Tooltip for remove parameter button",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
   "_I7/+er.comment": "Button text for whole overview",
@@ -1173,6 +1182,7 @@
   "_LBH8UV.comment": "Button to expand a pane",
   "_LBbhCu.comment": "Title for graph node",
   "_LCXZLM.comment": "Text for loading function apps",
+  "_LFBVn4.comment": "Error message thrown when token selector properties are missing",
   "_LJmfmK.comment": "Click to view more token options",
   "_LMB8am.comment": "Button text to show a connection is being created",
   "_LOwePI.comment": "Error message for when split on array is invalid.",
@@ -1272,6 +1282,7 @@
   "_PtqSHp.comment": "Checkbox label to not generate if no value",
   "_PvWTxR.comment": "Label to open Functions list",
   "_Pvm0xB.comment": "Label for description of custom base64 Function",
+  "_PxjmAH.comment": "Payroll run field description",
   "_Q+oELo.comment": "Timezone value ",
   "_Q/7unA.comment": "This is an option in a dropdown where users can select type Object for their parameter.",
   "_Q0xpPQ.comment": "Required object parameter to check if less than or equal to using lessOrEqual function",
@@ -1376,6 +1387,7 @@
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VLc3FV.comment": "Source schema",
   "_VUH9aj.comment": "Hour of the day",
+  "_VUNM37.comment": "The text for a field label",
   "_VVfYvq.comment": "Required number parameter to be divided from in div function",
   "_VXBWrq.comment": "This is for a label for a badge, it is used for screen readers and not shown on the screen.",
   "_VXQbMw.comment": "Label for switching input to array",
@@ -1491,6 +1503,7 @@
   "_bzF/qn.comment": "Required collection parameter to apply take function on",
   "_c/+j08.comment": "Do, as in \"to do an action\"",
   "_c1XmvN.comment": "Timezone value ",
+  "_c26Z1m.comment": "Panel description",
   "_c2XklE.comment": "Placeholder text for Operation/Connector search bar",
   "_c3G/zq.comment": "Label for description of custom setProperty Function",
   "_c4GQZE.comment": "Schema dropdown aria label",
@@ -1936,6 +1949,7 @@
   "_zIDVd9.comment": "Required string parameter to be converted using json function",
   "_zNesUZ.comment": "description of retry policy setting",
   "_zTKAc9.comment": "Select Actions",
+  "_zTeIyh.comment": "The text Business identifier for header",
   "_zUgja+.comment": "Label for button to clear the editor",
   "_zbtUQ/.comment": "Timezone value ",
   "_zcZpHT.comment": "Label for description of custom parseDateTime Function",
@@ -1981,6 +1995,7 @@
   "bzF/qn": "Required. The collection from where to take the first Count objects.",
   "c/+j08": "Do",
   "c1XmvN": "(UTC+13:00) Nuku'alofa",
+  "c26Z1m": "Build an expression for each property.",
   "c2XklE": "Search",
   "c3G/zq": "Returns an object with a property set to the provided value",
   "c4GQZE": "Select the schema for dropdown",
@@ -2426,6 +2441,7 @@
   "zIDVd9": "Required. The string that is converted to a native type value.",
   "zNesUZ": "A retry policy applies to intermittent failures, characterized as HTTP status codes 408, 429, and 5xx, in addition to any connectivity exceptions. The default is an exponential interval policy set to retry 4 times.",
   "zTKAc9": "Select Actions",
+  "zTeIyh": "Business identifier",
   "zUgja+": "Clear custom value",
   "zbtUQ/": "(UTC+08:30) Pyongyang",
   "zcZpHT": "Converts a string, with optionally a locale and a format to a date",
