--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -556,6 +556,7 @@
   "Q5w4Do": "Add dynamic data or expressions by inserting a /",
   "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
+  "QIOOQU": "No Items",
   "QQYzHC": "Context menu for {title} card",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
   "QZrxUk": "String functions",
@@ -1291,6 +1292,7 @@
   "_Q5w4Do.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
+  "_QIOOQU.comment": "Message to show when there are no items to show",
   "_QQYzHC.comment": "Accessability label",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
   "_QZrxUk.comment": "Label for string functions",
