feat(designer): Add Managed Identity picker in parameters view for MSI connections

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -288,6 +288,7 @@
   "BYrP8F": "Number",
   "Bn8iTS": "State type:",
   "BoMvF2": "Collapse",
+  "BrWQ0Z": "Select a managed identity",
   "BuYrD3": "A single format specifier that indicates how to format the value of this Guid.",
   "BxITRH": "Required. The object to check if it is greater than comparing object.",
   "C1cy54": "Body",
@@ -1028,6 +1029,7 @@
   "_BYrP8F.comment": "Placeholder title for a newly inserted Number parameter",
   "_Bn8iTS.comment": "Label text for workflow state type (Stateless or Stateful)",
   "_BoMvF2.comment": "Label for collapsing group",
+  "_BrWQ0Z.comment": "Placeholder text for identity selection",
   "_BuYrD3.comment": "Required format parameter to determine how to obtain GUID",
   "_BxITRH.comment": "Required object parameter to check if greater than using greater function",
   "_C1cy54.comment": "The title of the body field in the static result http action",
@@ -1537,6 +1539,7 @@
   "_d4xMIx.comment": "Timezone value ",
   "_dBWIjR.comment": "Title for an unconnected required schema card",
   "_dDYCuU.comment": "Link text to open URL",
+  "_dL9V5t.comment": "Text to show label for managed identity selector",
   "_dOpdsP.comment": "Update Expression",
   "_dQmi91.comment": "Label for Frequency",
   "_dSTRb/.comment": "description of content transfer setting",
@@ -1602,6 +1605,7 @@
   "_gRUmiA.comment": "Info about token picker",
   "_gTXyUo.comment": "Label for timezone",
   "_gWRF8m.comment": "title for trigger conditions setting",
+  "_gc6v4X.comment": "Text for system assigned managed identity",
   "_gfBWfH.comment": "Label for Email type dynamically added parameter",
   "_gg0j4S.comment": "Timezone value ",
   "_gkY5ya.comment": "Delete dynamic parameter corresponding to this row",
@@ -2036,6 +2040,7 @@
   "d4xMIx": "(UTC+02:00) Harare, Pretoria",
   "dBWIjR": "Schema is missing required inputs",
   "dDYCuU": "Learn more",
+  "dL9V5t": "Managed identity",
   "dOpdsP": "Update",
   "dQmi91": "Frequency",
   "dSTRb/": "Specify the behavior and capabilities for transferring content over HTTP. Large messages may be split up into smaller requests to the connector to allow large message upload. Details can be found at http://aka.ms/logicapps-chunk#upload-content-in-chunks",
@@ -2101,6 +2106,7 @@
   "gRUmiA": "Info",
   "gTXyUo": "Time Zone",
   "gWRF8m": "Trigger Conditions",
+  "gc6v4X": "System-assigned managed identity",
   "gfBWfH": "Email",
   "gg0j4S": "(UTC-06:00) Saskatchewan",
   "gkY5ya": "Delete",
