feat(designer): File picker (#2165)
* file picker

* comment changes

* Fixing the displayvalue to be fully qualified path

* Fixing some data models and removing circular dependency between services and ui packages

* fixing some circular dependencies

* removing variable enum

* fix

* fix typing in file picker

* fix onselectionchange for onchange plugins

* fix if initialvalue does not change

* update

---------

Co-authored-by: Priti Sambandam <psamband@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -565,6 +565,7 @@
   "Q5w4Do": "Add dynamic data or expressions by inserting a /",
   "QEp3C8": "Convert the input to a JSON type value",
   "QGbUXX": "Status code",
+  "QIOOQU": "No Items",
   "QQYzHC": "Context menu for {title} card",
   "QZ5DZl": "alt text for chevron down",
   "QZBPUx": "Returns a single value matching the key name from form-data or form-encoded trigger output",
@@ -1314,6 +1315,7 @@
   "_Q5w4Do.comment": "This is an a11y message meant to help screen reader users figure out how to insert dynamic data",
   "_QEp3C8.comment": "Label for description of custom json Function",
   "_QGbUXX.comment": "Response status code for test map API",
+  "_QIOOQU.comment": "Message to show when there are no items to show",
   "_QQYzHC.comment": "Accessability label",
   "_QZ5DZl.comment": "alt text for chevron down",
   "_QZBPUx.comment": "Label for description of custom triggerFormDataValue Function",
