--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -582,6 +582,7 @@
   "QrQDdp": "Required. A string containing the unit of time specified in the interval to subtract.",
   "Qu1HkA": "{hours}h",
   "Qy0Kha": "Triggers cannot be deleted.",
+  "R0/Vx4": "Text field for slider",
   "RFjYpH": "Name",
   "RPSKbr": "Enter audience",
   "RX2Shm": "Required. The string that is split.",
@@ -1332,6 +1333,7 @@
   "_QrQDdp.comment": "Required string parameter to represent the unit of time",
   "_Qu1HkA.comment": "This is a period in time in hours. {hours} is replaced by the number and h is an abbreviation of hours",
   "_Qy0Kha.comment": "Text to explain that triggers cannot be deleted",
+  "_R0/Vx4.comment": "Aria label for text field for slider",
   "_RFjYpH.comment": "Name of current node",
   "_RPSKbr.comment": "Audience Placeholder Text",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
