feat(designer): Show appropriate error messages when loading operations during deserialization fails

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -36,6 +36,7 @@
   "00xlpa": "Shared",
   "02vyBk": "Trigger",
   "07ZsoY": "Returns the start of the hour to a string timestamp passed in",
+  "08e2rO": "The managed identity used with this operation no longer exists. To continue, set up an identity or change the connection.",
   "09B9CU": "Returns the URL to invoke the trigger or action. Note: This function can only be used in an httpWebhook and apiConnectionWebhook, not in a manual, recurrence, http, or apiConnection.",
   "09oqLb": "(UTC+04:00) Baku",
   "0CvRZW": "Save",
@@ -708,6 +709,7 @@
   "XaS4ds": "(UTC-08:00) Pacific Time (US & Canada)",
   "XbtEq9": "Count",
   "Xj0Gr/": "Target schema element cannot be deleted.",
+  "Xj4xwI": "The managed identity used with this operation no longer exists. To continue, select an available identity or change the connection.",
   "XkBxv5": "Select a target schema",
   "Xkt2vD": "Select a function app function",
   "Xnn0uj": "Request",
@@ -787,6 +789,7 @@
   "_00xlpa.comment": "Filter by Shared category of connectors",
   "_02vyBk.comment": "Badge showing an action is a logic apps trigger",
   "_07ZsoY.comment": "Label for description of custom startOfHour Function",
+  "_08e2rO.comment": "Error message when logic app doesnt have managed identities",
   "_09B9CU.comment": "documentation of custom listCallbackUrl Function",
   "_09oqLb.comment": "Timezone value ",
   "_0CvRZW.comment": "Save",
@@ -1459,6 +1462,7 @@
   "_XaS4ds.comment": "Timezone value ",
   "_XbtEq9.comment": "title for retry count setting",
   "_Xj0Gr/.comment": "Message informing that target element cannot be removed",
+  "_Xj4xwI.comment": "Erorr mesade when managed identity is not present in logic apps",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
   "_Xkt2vD.comment": "Label for function app selection",
   "_Xnn0uj.comment": "Header text for request",
@@ -1876,6 +1880,7 @@
   "_tJMHcJ.comment": "Title for the select connection reference tab",
   "_tLZ9Sh.comment": "Required number parameter to be used as index for multipartBody function",
   "_tMRPnG.comment": "Label for description of custom workflow Function",
+  "_tMdcE1.comment": "Error message to show on connection error during deserialization",
   "_tNoZx2.comment": "Parameter Field Type Title",
   "_tP+5fA.comment": "Timezone value ",
   "_tUYXRA.comment": "Placeholder for Start time",
@@ -2379,6 +2384,7 @@
   "tJMHcJ": "Select Connection Reference",
   "tLZ9Sh": "Required. The index of the part to retrieve.",
   "tMRPnG": "This function provides you details for the workflow itself at runtime",
+  "tMdcE1": "Invalid connection, please update your connection to load complete details",
   "tNoZx2": "Type",
   "tP+5fA": "(UTC+06:00) Novosibirsk",
   "tUYXRA": "Example: 2017-03-24T15:00:00Z",
