feat(designer): Showing dynamic content load errors in card

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -440,6 +440,7 @@
   "Jpox7O": "When enabled, this action will run with the user from the \"Run as\" setting in the Dataverse trigger.",
   "JpthWY": "(UTC-03:00) Montevideo",
   "Jq2Y/o": "Required. The numeric format string.",
+  "JtV9ju": "Failed to retrive dynamic inputs. Error details: '{message}'",
   "JzqgNM": "Set the tracking id for the run. For split-on this tracking id is for the initiating request.",
   "K50znc": "Required. The object to add a new property to.",
   "K7/DnZ": "Output",
@@ -1193,6 +1194,7 @@
   "_Jpox7O.comment": "description of invoker connection setting",
   "_JpthWY.comment": "Timezone value ",
   "_Jq2Y/o.comment": "Required format parameter to apply formatNumber function with",
+  "_JtV9ju.comment": "Error message to show when loading dynamic inputs failed",
   "_JzqgNM.comment": "description for client tracking id setting",
   "_K50znc.comment": "Required object parameter to add a property in addProperty function",
   "_K7/DnZ.comment": "The title of the output field in the static result parseJson action",
@@ -1951,6 +1953,7 @@
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
   "_wXJALc.comment": "Open dynamically added parameter options menu",
+  "_wit5UT.comment": "Error message to show when loading dynamic outputs failed.",
   "_wkiETV.comment": "Client Tracking ID text",
   "_wkvUUA.comment": "Title for the input type mismatch card",
   "_wl7X0l.comment": "Label to hide the mini-map",
@@ -2455,6 +2458,7 @@
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
   "wXJALc": "Menu",
+  "wit5UT": "Failed to retrive dynamic outputs, outputs of this operation might not be visible in subsequent actions. Error details: {message}",
   "wkiETV": "Client Tracking ID",
   "wkvUUA": "Input type mismatch",
   "wl7X0l": "Hide mini-map",
